time table v2 (ITS PINK).html

--- a/time table v2 (ITS PINK).html
+++ b/time table v2 (ITS PINK).html
@@ -6,7 +6,7 @@
   <title>Weekly Timetable + Tests Calendar</title>
   <style>
     :root{
-      --bg:#0b0c10;           /* dark mode default */
+      --bg:#0b0c10;           /* dark mode default, I gotchu */
       --panel:#111218;
       --muted:#848a98;
       --text:#e9edf3;
@@ -18,8 +18,8 @@
       --radius:14px;
       --shadow:0 10px 30px rgba(0,0,0,.35);
       --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      --start-hour:7; /* calendar starts 07:00 */
-      --end-hour:22;  /* calendar ends 22:00 */
+      --start-hour:7; /* calendar starts 07:00 because fuck my uni*/
+      --end-hour:22;  /* calendar ends 22:00 because my students do not sleep*/
       --px-per-min:1; /* 1px per minute => 60px per hour */
     }
     .light{
@@ -36,7 +36,7 @@
     }
     
 
-    /* 🌸 Sakura theme (pink + black) */
+    /*  Sakura theme (pink + black) man i just really like pink okay??*/
     .sakura {
       --bg:#000000;
       --panel:#1a1a1a;
@@ -50,7 +50,7 @@
       --shadow:0 10px 30px rgba(255,105,180,.3);
     }
 
-    /* ✨ Sparkle theme (pink + white) */
+    /* Sparkle theme (pink + white) (it was a friend request )*/
     .sparkle {
       --bg:#fff0f6;
       --panel:#ffffff;
